# pg2

./: .gitignore  Cargo.toml  README.md  memo-hwk1.md  memo-hwk2.md  memo-postgres.md  memo-redis.md  results
migrations/2021-01-31-061525_create_tweets/: down.sql  up.sql
migrations/2021-01-31-063223_make_nonnull/: down.sql  up.sql
migrations/2021-02-03-070310_add_follower/: down.sql  up.sql
migrations/2021-02-06-050424_remove-posts/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
